beginning layout on dish details

--- a/dinnerOverview.html
+++ b/dinnerOverview.html
@@ -23,13 +23,7 @@
 	<div class="container-fluid">
 		<div class="row" id="dishIcons"></div>
 	</div>
-
-	<div class="dinnerOverview">
-		Display each dish on the menu with price and a total.
-	</div>
-	<div class=print-btn>
-		Finally a button that says "Print full recipe"
-	</div>
+	<button type="button" class="btn btn-warning" id="PrintRecipe">Print full recipe</button>
 
 	<!-- jQuery and Bootstrap-->
 	<script src="https://code.jquery.com/jquery.js"></script>
