--- a/dishDetails.html
+++ b/dishDetails.html
@@ -37,12 +37,12 @@
 
 			<!--DISH DETAILS -->
 			<div class="col-sm-9" id="second-page-body">
-				<div id="DishInstructions">
+				<div id="dishInstructions">
 					<h2>
-						<div  id="DishTitle"></div>
+						<div  id="dishTitle"></div>
 					</h2>
-					<div    id="DishImage"></div>
-					<div    id="DishDescription"></div>
+					<div    id="dishImage"></div>
+					<div    id="dishDescription"></div>
 					<button id="ToSearch">Back to search</button>
 					<div>
 						<table id="DishIngredients"></table>
