--- a/dishDetails.html
+++ b/dishDetails.html
@@ -17,62 +17,91 @@
 	<div class="container-fluid">
 		<div class="row">
 			<!--SIDEBAR-->
-			<div class="col-md-2 border" id="DinnerSidebar">
+			<div class="col-sm-3 col-xs-12 border" id="sidebar">
 				<h3>My Dinner</h3>
-				<p>Number Of Guests: <span id="NumberOfGuests"></span>
+				<p>Number Of Guests: <span id="numberOfGuests"></span>
 					<div>
 						<button id="removeGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
 						<button id="addGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
 					</div>
 				</p>
-				<div class="row header1">
-					<div class="col-md-12">
-						<p class="alignLeft noMargin">Dish Name</p>
-						<p class="alignRight noMargin">Cost</p>
+				<div class="row border">
+					<div class="col-xs-6 alignLeft noMargin">
+						<h4>Dishname</h4>
+					</div>
+					<div class="col-xs-6 alignRight noMargin">
+						<h4>Price</h4>
 					</div>
 				</div>
-				<div id="PriceOfMenu">Price of menu not found.</div>
+				<div class="row border" id="menuItems">
+				</div>
+				<div class="row">
+					<div class="col-sm-6 col-xs-6">Price of menu</div>
+					<div class="col-sm-6 col-xs-6" id="priceOfMenu" >[Display price here]</div>
+				</div>
+				<button type="button" class="btn btn-warning btn-block" id="ConfirmDinner">Confirm dinner</button>
 			</div>
 			<!--END SIDEBAR-->
 
-			<!--DISH DETAILS -->
-			<div class="col-sm-9" id="second-page-body">
+			<!--DISH INSTRUCTIONS -->
+			<div class="col-sm-4" id="second-page-body">
 				<div id="dishInstructions">
 					<h2>
 						<div  id="dishTitle"></div>
 					</h2>
 					<div    id="dishImage"></div>
 					<div    id="dishDescription"></div>
-					<button id="ToSearch">Back to search</button>
-					<div>
-						<table id="DishIngredients"></table>
-					</div>
-				</div>
-
-				<!--END DISH DETAILS -->
-
-				<!--FOOTER? -->
-				<div class="row" style = "height: 70%; background: antiquewhite">
-					<img class="card-img-top" src="images\bakedbrie.jpg" alt="Card image cap">
+					<button type="button" class="btn btn-warning" id="ToSearch">Back to search</button>
 				</div>
 			</div>
-			<!--END FOOTER? -->
+			<!--END DISH INSTRUCTIONS -->
+
+			<!--DISH INGREDIENTS -->
+			<div class="col-sm-5 border" id="second-page-body" style="background: antiquewhite">
+				<div id="dishIngredients">
+					<h3>
+						<div>Ingredients for <span id="numberOfGuests"></span> persons</div>
+					</h3>
+					<div id="ingredientsDisplay">
+						<div class="col-xs-2 noMargin"><b>Quantity</b></div>
+						<div class="col-xs-2 noMargin"><b>Unit</b></div>
+						<div class="col-xs-4 noMargin"><b>Ingredient</b></div>
+						<div class="col-xs-4 noMargin"><b>Price</b></div>
+						<div class="clearfix"></div>
+					</div>
+					<div class = "row">
+						<div class="col-sm-offset-1" style= "float: left">
+							<button type="button" class="btn btn-warning" id="addToMenu">Add to menu</button>
+						</div>
+						<div class="col-sm-offset-3"style="float: left">
+							<b>Dish price: <span id="dishPrice"></span> SEK</b>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--END DISH INGREDIENTS -->
+
+			<!--FOOTER? -->
+			<div class="row" style = "height: 70%">
+			</div>
 		</div>
+		<!--END FOOTER? -->
 	</div>
+</div>
 
-	<!-- jQuery and Bootstrap-->
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<!-- jQuery and Bootstrap-->
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-	<!-- The application JavaScript code -->
-	<script src="js/app.js"></script>
-	<script src="js/model/dinnerModel.js"></script>
+<!-- The application JavaScript code -->
+<script src="js/app.js"></script>
+<script src="js/model/dinnerModel.js"></script>
 
-	<script src="js/view/sidebarView.js"></script>
-	<script src="js/view/dishDetailsView.js"></script>
-	<script src="js/view/dishIconsView.js"></script>
+<script src="js/view/sidebarView.js"></script>
+<script src="js/view/dishIngredientsView.js"></script>
+<script src="js/view/dishIconsView.js"></script>
+<script src="js/view/dishInstructionsView.js"></script>
 
-	
 
 </body>
 </html>
