--- a/dishDetails.html
+++ b/dishDetails.html
@@ -87,20 +87,20 @@
 		</div>
 		<!--END FOOTER? -->
 	</div>
-</div>
 
-<!-- jQuery and Bootstrap-->
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+	<!-- jQuery and Bootstrap-->
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-<!-- The application JavaScript code -->
-<script src="js/app.js"></script>
-<script src="js/model/dinnerModel.js"></script>
+	<!-- The application JavaScript code -->
+	<script src="js/app.js"></script>
+	<script src="js/model/dinnerModel.js"></script>
 
-<script src="js/view/sidebarView.js"></script>
-<script src="js/view/dishIngredientsView.js"></script>
-<script src="js/view/dishIconsView.js"></script>
-<script src="js/view/dishInstructionsView.js"></script>
+	<script src="js/view/sidebarView.js"></script>
+	<script src="js/view/dishIngredientsView.js"></script>
+	<script src="js/view/dishIconsView.js"></script>
+	<script src="js/view/dishInstructionsView.js"></script>
+	<script src="js/view/overviewView.js"></script>
 
 
 </body>
