--- a/selectDish.html
+++ b/selectDish.html
@@ -94,8 +94,9 @@
 	<script src="js/model/dinnerModel.js"></script>
 
 	<script src="js/view/sidebarView.js"></script>
-	<script src="js/view/dishDetailsView.js"></script>
+	<script src="js/view/dishIngredientsView.js"></script>
 	<script src="js/view/dishIconsView.js"></script>
+	<script src="js/view/dishInstructionsView.js"></script>
 
 </body>
 </html>
