--- a/dinnerPrintout.html
+++ b/dinnerPrintout.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner Printout - Dinner planner</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Welcome - Dinner planner</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="style.css"> <!--"http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" -->
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+</head>
 
+<body>
+<div class="jumbotron text-center">
+  <h1>Dinner Planner</h1>
+</div>
 
-  <body>
-    <div class="grid-container">
-      <div class="header">
-        <h1>Dinner planner</h1>
-      </div>
-
-      <div class="subtitle">
-        At the top:
-        My dinner: how many people are the recipe and price for? To the right, a button that says "Go back and edit dinner"
-        Doesn't need to be very dynamic.
-      </div>
-
-      <div class="printout">
-        Array of boxes on top of each other. Picture to the left. Some text in the middle. Instructions to the right.
-        
-      </div>
+  <div class="modal-body row">
+    <div class="col-md-6">
+    <h2 style="margin-top:0">My Dinner: <span id="Guests"></span> people</h2>
     </div>
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <div class="col-md-6">
+      <button type="button" class="btn btn-warning" id="GoBackButton" style= "float:right">Go back to edit dinner</button>
+    </div>
+  </div>
 
-  <!-- The application JavaScript code -->
-  <script src="js/app.js"></script>
-  <script src="js/model/dinnerModel.js"></script>
-  <script src="js/view/exampleView.js"></script>
-  <!-- TODO: Here you should include JS code for your other views -->
-  </body>
+
+<!-- jQuery and Bootstrap-->
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+
+<!-- The application JavaScript code -->
+<script src="js/app.js"></script>
+<script src="js/model/dinnerModel.js"></script>
+
+<script src="js/view/sidebarView.js"></script>
+<script src="js/view/dishDetailsView.js"></script>
+<script src="js/view/dishIconsView.js"></script>
+</body>
 </html>
