--- a/dinnerPrintout.html
+++ b/dinnerPrintout.html
@@ -15,6 +15,7 @@
   <h1>Dinner Planner</h1>
 </div>
 
+<div class="dinnerPrintout" >
   <div class="modal-body row">
     <div class="col-md-6">
     <h2 style="margin-top:0">My Dinner: <span id="Guests"></span> people</h2>
@@ -23,7 +24,11 @@
       <button type="button" class="btn btn-warning" id="GoBackButton" style= "float:right">Go back to edit dinner</button>
     </div>
   </div>
+<hr>
 
+<div id="printoutContainer"></div>
+
+</div>
 
 <!-- jQuery and Bootstrap-->
 <script src="https://code.jquery.com/jquery.js"></script>
