All views working and combined in index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 	
 	<div class="container-fluid">
-		<!--WELCOME AND ENTER-->
+		<!--WELCOME AND ENTER--> <!-- Welcome has no view --> 
 		<div class="row">
 			<div class="col-sm-offset-3 col-sm-6" id="FirstPageBody">
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
@@ -52,11 +52,11 @@
 				<button type="button" class="btn btn-warning btn-block" id="ConfirmDinner">Confirm dinner</button>
 			</div>
 			<!--END SIDEBAR-->
-
-			
+++++++++++++++++++++++++++++++++++++++
 			<div class="col-sm-9 col-xs-12" id="second-page-body">
-				<!--DISH SEARCH -->
-				<div class="row">
+				<!--DISH SEARCH --> <!-- Dish search has no view -->
+				<div class="row" id="dishSearch">
+					>>Dish Search<<
 					<div>
 						<h3>Find a dish</h3>
 					</div>
@@ -77,17 +77,19 @@
 					<button type="button" class="btn btn-warning" id="SearchButton">Search</button>
 				</div>
 				<!--END DISH SEARCH -->
-
+++++++++++++++++++++++++++++++++++++++
 				<!--SEARCH RESULTS -->
-				<div class="row">
+				<div class="row" id="searchResults">
+					>>Search Results<<
 					<div id="dishIcons"></div>
 				</div>
 				<!--END SEARCH RESULTS -->
-
+++++++++++++++++++++++++++++++++++++++
 				<!--DISH INSTRUCTIONS AND INGREDIENTS -->
-				<div class="row">
+				<div class="row" id="dishInstructions">
+					>>Dish Instructions<<
 					<div class="col-sm-4">
-						<div id="dishInstructions">
+						<div>
 							<h2>
 								<div  id="dishTitle"></div>
 							</h2>
@@ -97,7 +99,7 @@
 						</div>
 					</div>
 					<div class="col-sm-5 border" style="background: antiquewhite">
-						<div id="dishIngredients">
+						<div>
 							<h3>
 								<div>Ingredients for <span id="numberOfGuests"></span> persons</div>
 							</h3>
@@ -120,33 +122,30 @@
 					</div>
 				</div>
 				<!--END DISH INSTRUCTIONS AND INGREDIENTS -->
-
-				<!--DINNER OVERVIEW -->
-				<div class="row">
-					<div class="col-sm-12 border">
+++++++++++++++++++++++++++++++++++++++
+				<!--MENU OVERVIEW -->
+				<div class="row" id="menuOverview">
+					>>Menu Overview<<
+					<div class="col-xs-12 border">
 						<h3>My dinner: <span id="numberOfGuests"></span> people </h3>
-						<button type="button" class="btn btn-warning col-sm-3 col-sm-offset-5 col-xs-5">Go back and edit menu</button>
+						<button type="button" class="btn btn-warning" style= "float:right">Go back and edit menu</button>
 					</div>
-					<div class="row" id="menuOverview">
+					<div class="row" id="menuDisplay">
 					</div>
 					<button type="button" class="btn btn-warning" id="PrintRecipe">Print full recipe</button>
 				</div>
-				<!--END DINNER OVERVIEW -->
-
-				<!--DINNER PRINTOUT -->
-				<div class="dinnerPrintout" >
-					<div class="modal-body row">
-						<div class="col-md-6">
-							<h2 style="margin-top:0">My Dinner: <span id="Guests"></span> people</h2>
-						</div>
-						<div class="col-md-6">
-							<button type="button" class="btn btn-warning" id="GoBackButton" style= "float:right">Go back to edit dinner</button>
-						</div>
+				<!--END MENU OVERVIEW -->
+++++++++++++++++++++++++++++++++++++++
+				<!--MENU PRINTOUT -->
+				<div class="row" id="menuPrintout">
+					>>Menu Printout<<
+					<div class="col-xs-12 border">
+						<h3>My dinner: <span id="numberOfGuests"></span> people </h3>
+						<button type="button" class="btn btn-warning" style= "float:right">Go back and edit menu</button>
 					</div>
-					<hr>
-					<div id="printoutContainer"></div>
+					<div id="printoutDisplay"></div>
 				</div>
-				<!--END DINNER PRINTOUT -->
+				<!--END MENU PRINTOUT -->
 			</div>
 		</div>
 	</div>
@@ -162,9 +161,9 @@
 	<script src="js/model/dinnerModel.js"></script>
 
 	<script src="js/view/sidebarView.js"></script>
-	<script src="js/view/dishIngredientsView.js"></script>
-	<script src="js/view/dishIconsView.js"></script>
+	<script src="js/view/dishSearchView.js"></script>
 	<script src="js/view/dishInstructionsView.js"></script>
 	<script src="js/view/menuOverviewView.js"></script>
+	<script src="js/view/menuPrintoutView.js"></script>
 </body>
 </html>
