--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 		<div class="row">
 			<!--SIDEBAR-->
-			<div class="col-sm-3 col-xs-12 border" id="sidebar">
+			<button class="visible-xs btn btn-warning" data-toggle="collapse" data-target="#sidebar" style= "float:right">MENU</button>
+			<div class="col-sm-3 col-xs-12 border collapse" id="sidebar">
 				<h3>My Dinner</h3>
 				<p>Number Of Guests: <span id="numberOfGuests"></span>
 					<div>
@@ -52,7 +53,7 @@
 				<button type="button" class="btn btn-warning btn-block" id="ConfirmDinner">Confirm dinner</button>
 			</div>
 			<!--END SIDEBAR-->
-++++++++++++++++++++++++++++++++++++++
+
 			<div class="col-sm-9 col-xs-12" id="second-page-body">
 				<!--DISH SEARCH --> <!-- Dish search has no view -->
 				<div class="row" id="dishSearch">
