converted welcomepage into view

--- a/index.html
+++ b/index.html
@@ -17,17 +17,12 @@
 	
 	<div class="container-fluid">
 		<!--WELCOME AND ENTER--> <!-- Welcome has no view --> 
-		<div class="row">
-			<div class="col-sm-offset-3 col-sm-6" id="FirstPageBody">
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-				<button type="button" class="btn btn-warning" id="WelcomeButton">Create new dinner</button>
-			</div>
-		</div>
+		<div class="row" id="welcome"></div>
 		<!--END WELCOME AND ENTER-->
 
 		<div class="row">
 			<!--SIDEBAR-->
-			<button class="visible-xs btn btn-warning" data-toggle="collapse" data-target="#sidebar" style= "float:right">MENU</button>
+			<button class="visible-xs hidden-sm btn btn-warning" data-toggle="collapse" data-target="#sidebar" style= "float:right">MENU</button>
 			<div class="col-sm-3 col-xs-12 border collapse" id="sidebar">
 				<h3>My Dinner</h3>
 				<p>Number Of Guests: <span id="numberOfGuests"></span>
@@ -161,6 +156,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
 
+	<script src="js/view/welcomeView.js"></script>
 	<script src="js/view/sidebarView.js"></script>
 	<script src="js/view/dishSearchView.js"></script>
 	<script src="js/view/dishInstructionsView.js"></script>
