Sidebar content moved to view

--- a/index.html
+++ b/index.html
@@ -22,30 +22,8 @@
 
 		<div class="row">
 			<!--SIDEBAR-->
-			<button class="visible-xs hidden-sm btn btn-warning" data-toggle="collapse" data-target="#sidebar" style= "float:right">MENU</button>
+			<button class="btn btn-warning" data-toggle="collapse" data-target="#sidebar" style= "float:right">MENU</button>
 			<div class="col-sm-3 col-xs-12 border collapse" id="sidebar">
-				<h3>My Dinner</h3>
-				<p>Number Of Guests: <span id="numberOfGuests"></span>
-					<div>
-						<button id="removeGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
-						<button id="addGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
-					</div>
-				</p>
-				<div class="row border">
-					<div class="col-xs-6 alignLeft noMargin">
-						<h4>Dishname</h4>
-					</div>
-					<div class="col-xs-6 alignRight noMargin">
-						<h4>Price</h4>
-					</div>
-				</div>
-				<div class="row border" id="menuItems">
-				</div>
-				<div class="row">
-					<div class="col-sm-6 col-xs-6">Price of menu</div>
-					<div class="col-sm-6 col-xs-6" id="priceOfMenu" >[Display price here]</div>
-				</div>
-				<button type="button" class="btn btn-warning btn-block" id="ConfirmDinner">Confirm dinner</button>
 			</div>
 			<!--END SIDEBAR-->
 
