--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 						<span id="numberOfGuests"></span>
 						<button id="addGuest" class="btn">
 							<span class="glyphicon glyphicon-plus"></span>
+						</button>
+						<button id="removeGuest" class="btn">
 							<span class="glyphicon glyphicon-minus"></span>
 						</button>
 					</div>
@@ -92,7 +94,7 @@
 							<h2 id="dishTitle"></h2>
 							<img id="dishImage">
 							<p id="dishDescription"></p>
-							<button id="ToSearch" class="btn btn-warning" type="button">Back to search</button>
+							<button id="toSearch" class="btn btn-warning" type="button">Back to search</button>
 						</div>
 					</div>
 					<!--END DISH INSTRUCTIONS -->
@@ -128,10 +130,10 @@
 		<div id="dinnerOverview">
 			<div class="row">
 				<h3>My dinner: <span id="numberOfGuests"></span> people </h3>
-				<button class="btn btn-warning" type="button" style= "float:right">Go back and edit dinner</button>
+				<button id="editDinnerOverview" class="btn btn-warning" type="button" style= "float:right">Go back and edit dinner</button>
 			</div>
 			<div id="dinnerDisplayRow" class="row"></div>
-			<button id="PrintRecipe" class="btn btn-warning" type="button">Print full recipe</button>
+			<button id="printRecipe" class="btn btn-warning" type="button">Print full recipe</button>
 		</div>
 		<!--END DINNER OVERVIEW -->
 
@@ -139,7 +141,7 @@
 		<div id="dinnerPrintout">
 			<div class="row">
 				<h3>My dinner: <span id="numberOfGuests"></span> people </h3>
-				<button class="btn btn-warning" type="button" style= "float:right">Go back and edit dinner</button>
+				<button id="editDinnerPrintout" class="btn btn-warning" type="button" style= "float:right">Go back and edit dinner</button>
 			</div>
 			<div id="printoutDisplay"></div>
 		</div>
@@ -154,14 +156,24 @@
 	<!-- The application JavaScript code -->
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
+	
 	<script src="js/view/welcomeView.js"></script>
 	<script src="js/controller/welcomeController.js"></script>
 
 	<script src="js/view/sidebarView.js"></script>
+	<script src="js/controller/sidebarController.js"></script>
+
 	<script src="js/view/selectDishView.js"></script>
 	<script src="js/controller/selectDishController.js"></script>
+
 	<script src="js/view/dishDetailsView.js"></script>
+	<script src="js/controller/dishDetailsController.js"></script>
+
 	<script src="js/view/dinnerOverviewView.js"></script>
+	<script src="js/controller/dinnerOverviewController.js"></script>
+
 	<script src="js/view/dinnerPrintoutView.js"></script>
+	<script src="js/controller/dinnerPrintoutController.js"></script>
+
 </body>
 </html>
