Mobile view fixed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					</div>
 					<!--END DISH INSTRUCTIONS -->
 					<!--DISH INGREDIENTS -->
-					<div class="col-sm-5 border" style="background: antiquewhite">
+					<div class="col-sm-5 col-xs-12 border" style="background: antiquewhite">
 						<div>
 							<h3>Ingredients for <span id="numberOfGuests"></span> persons</h3>
 							<div id="ingredientsDisplay" class="row"></div>
