--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="row" id="welcome">
 			<div class="col-sm-offset-3 col-sm-6">
 				<p id="welcomeText">[Welcome text. Fetched by view.]</p>
-				<button class="btn btn-warning" id="welcomeButton" type="button">Create New Dinner</button>
+				<button class="btn btn-warning" id="editWelcome" type="button">Create New Dinner</button>
 			</div>
 		</div>
 		<!--END WELCOME AND ENTER-->
